[Profiles] Mark profile contexts as live in Profile construction

The KeyedServiceDependencyManager marks contexts as live in order to
detect when a context is used after shutdown is initiated. Ensure that
Profile contexts are marked as live by calling
BrowserContextDependencyManager::GetInstance()->MarkBrowserContextLive(this);
from the Profile constructor.

Bug: 745729

Change-Id: Icaa7950d77c1e33cbc098da8282ba3ff7f6977f3
Reviewed-on: https://chromium-review.googlesource.com/576339
Reviewed-by: Elliot Glaysher <erg@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#488101}